--- a/StokTakip/src/application/form1.fxml
+++ b/StokTakip/src/application/form1.fxml
@@ -50,7 +50,7 @@
                               <ChoiceBox layoutX="574.0" layoutY="57.0" prefHeight="25.0" prefWidth="171.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
                               <Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
                               <TextField layoutX="41.0" layoutY="73.0" />
@@ -102,11 +102,11 @@
                               <ChoiceBox layoutX="574.0" layoutY="176.0" prefHeight="25.0" prefWidth="171.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane fx:id="settingsForm" layoutX="10.0" layoutY="10.0" prefHeight="610.0" prefWidth="787.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane fx:id="settingsForm" layoutX="10.0" layoutY="10.0" prefHeight="610.0" prefWidth="787.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Label layoutX="131.0" layoutY="58.0" text="KATEGORİ ADI" />
-                              <TextField fx:id="categoriTextBox" layoutX="131.0" layoutY="75.0" />
-                              <Button fx:id="newcategoribtn" layoutX="303.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueInsertDataBase" prefHeight="42.0" prefWidth="163.0" text="YENİ KATEGORİ OLUŞTUR" textAlignment="CENTER" />
+                              <Label layoutX="227.0" layoutY="55.0" text="KATEGORİ ADI" />
+                              <TextField fx:id="categoriTextBox" layoutX="227.0" layoutY="72.0" />
+                              <Button fx:id="newcategoribtn" layoutX="399.0" layoutY="55.0" mnemonicParsing="false" onAction="#valueInsertDataBase" prefHeight="42.0" prefWidth="163.0" text="YENİ KATEGORİ OLUŞTUR" textAlignment="CENTER" />
                               <TableView fx:id="settingstableview" layoutX="43.0" layoutY="112.0" prefHeight="361.0" prefWidth="702.0">
                                  <columns>
                                     <TableColumn fx:id="settingstableviewcolumn1" prefWidth="117.0" text="C1" />
@@ -117,7 +117,6 @@
                               <TextField editable="false" layoutX="92.0" layoutY="514.0" prefHeight="25.0" prefWidth="336.0" />
                               <Button layoutX="428.0" layoutY="514.0" mnemonicParsing="false" text="GÖZAT" />
                               <Button layoutX="498.0" layoutY="497.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="163.0" text="EXCEL'E AKTAR" textAlignment="CENTER" />
-                              <Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueDeleteDataBase" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
                            </children>
                         </AnchorPane>
                      </children>
