--- a/StokTakip/src/application/form1.fxml
+++ b/StokTakip/src/application/form1.fxml
@@ -13,117 +13,118 @@
 <?import javafx.scene.layout.StackPane?>
 
 <StackPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Form1Controller">
-   <children>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="840.0">
-         <children>
-            <BorderPane prefHeight="600.0" prefWidth="840.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <left>
-                  <AnchorPane prefHeight="599.0" prefWidth="223.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <AnchorPane prefHeight="600.0" prefWidth="223.0" style="-fx-background-color: GRAY;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Button fx:id="homeBtn" layoutX="12.0" layoutY="221.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="25.0" prefWidth="200.0" text="ANA SAYFA" textAlignment="CENTER" />
-                              <Button fx:id="addStockBtn" layoutX="12.0" layoutY="254.0" mnemonicParsing="false" onAction="#switchForm" prefWidth="200.0" text="STOK EKLE" textAlignment="CENTER" />
-                              <Button fx:id="updateStockBtn" layoutX="12.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefWidth="200.0" text="STOK GÜNCELLE" textAlignment="CENTER" />
-                              <Button fx:id="settingsBtn" layoutX="11.0" layoutY="561.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="25.0" prefWidth="201.0" text="AYARLAR" textAlignment="CENTER" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </AnchorPane>
-               </left>
-               <center>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <TableView layoutX="43.0" layoutY="82.0" prefHeight="479.0" prefWidth="702.0">
-                                 <columns>
-                                    <TableColumn prefWidth="117.0" text="C1" />
-                                    <TableColumn prefWidth="117.0" text="C2" />
-                                    <TableColumn prefWidth="117.0" text="C3" />
-                                    <TableColumn prefWidth="117.0" text="C4" />
-                                    <TableColumn prefWidth="117.0" text="C5" />
-                                    <TableColumn prefWidth="117.0" text="C6" />
-                                 </columns>
-                              </TableView>
-                              <TextField layoutX="43.0" layoutY="57.0" prefHeight="25.0" prefWidth="526.0" />
-                              <ChoiceBox layoutX="574.0" layoutY="57.0" prefHeight="25.0" prefWidth="171.0" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
-                              <TextField layoutX="41.0" layoutY="73.0" />
-                              <Label layoutX="194.0" layoutY="56.0" text="ÜRÜN ADI" />
-                              <TextField layoutX="194.0" layoutY="73.0" />
-                              <Label layoutX="347.0" layoutY="56.0" text="ÜRÜN ADETİ" />
-                              <Spinner editable="true" layoutX="347.0" layoutY="73.0" prefHeight="25.0" prefWidth="90.0" />
-                              <Label layoutX="442.0" layoutY="56.0" text="KATEGORİ" />
-                              <ComboBox editable="true" layoutX="441.0" layoutY="73.0" prefWidth="149.0" />
-                              <Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
-                              <TextField layoutX="594.0" layoutY="73.0" />
-                              <Button layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ EKLE" textAlignment="CENTER" />
-                              <TableView layoutX="43.0" layoutY="156.0" prefHeight="412.0" prefWidth="702.0">
-                                 <columns>
-                                    <TableColumn prefWidth="117.0" text="C1" />
-                                    <TableColumn prefWidth="117.0" text="C2" />
-                                    <TableColumn prefWidth="117.0" text="C3" />
-                                    <TableColumn prefWidth="117.0" text="C4" />
-                                    <TableColumn prefWidth="117.0" text="C5" />
-                                    <TableColumn prefWidth="117.0" text="C6" />
-                                 </columns>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
-                              <TextField layoutX="41.0" layoutY="73.0" />
-                              <Label layoutX="194.0" layoutY="56.0" text="ÜRÜN ADI" />
-                              <TextField layoutX="194.0" layoutY="73.0" />
-                              <Label layoutX="347.0" layoutY="56.0" text="ÜRÜN ADETİ" />
-                              <Spinner editable="true" layoutX="347.0" layoutY="73.0" prefHeight="25.0" prefWidth="90.0" />
-                              <Label layoutX="442.0" layoutY="56.0" text="KATEGORİ" />
-                              <ComboBox editable="true" layoutX="441.0" layoutY="73.0" prefWidth="149.0" />
-                              <Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
-                              <TextField layoutX="594.0" layoutY="73.0" />
-                              <Button layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ GÜNCELLE" textAlignment="CENTER" />
-                              <TableView layoutX="43.0" layoutY="201.0" prefHeight="361.0" prefWidth="702.0">
-                                 <columns>
-                                    <TableColumn prefWidth="117.0" text="C1" />
-                                    <TableColumn prefWidth="117.0" text="C2" />
-                                    <TableColumn prefWidth="117.0" text="C3" />
-                                    <TableColumn prefWidth="117.0" text="C4" />
-                                    <TableColumn prefWidth="117.0" text="C5" />
-                                    <TableColumn prefWidth="117.0" text="C6" />
-                                 </columns>
-                              </TableView>
-                              <TextField layoutX="43.0" layoutY="176.0" prefHeight="25.0" prefWidth="526.0" />
-                              <ChoiceBox layoutX="574.0" layoutY="176.0" prefHeight="25.0" prefWidth="171.0" />
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane fx:id="settingsForm" layoutX="10.0" layoutY="10.0" prefHeight="610.0" prefWidth="787.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <Label layoutX="131.0" layoutY="58.0" text="KATEGORİ ADI" />
-                              <TextField fx:id="categoriTextBox" layoutX="131.0" layoutY="75.0" />
-                              <Button fx:id="newcategoribtn" layoutX="303.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueInsertDataBase" prefHeight="42.0" prefWidth="163.0" text="YENİ KATEGORİ OLUŞTUR" textAlignment="CENTER" />
-                              <TableView fx:id="settingstableview" layoutX="43.0" layoutY="112.0" prefHeight="361.0" prefWidth="702.0">
-                                 <columns>
-                                    <TableColumn fx:id="settingstableviewcolumn1" prefWidth="117.0" text="C1" />
-                                    <TableColumn fx:id="settingstableviewcolumn2" prefWidth="255.0" text="C2" />
-                                 </columns>
-                              </TableView>
-                              <Label layoutX="92.0" layoutY="497.0" text="EXCEL'İN OLUŞTURULACAĞI DOSYA YOLU" />
-                              <TextField editable="false" layoutX="92.0" layoutY="514.0" prefHeight="25.0" prefWidth="336.0" />
-                              <Button layoutX="428.0" layoutY="514.0" mnemonicParsing="false" text="GÖZAT" />
-                              <Button layoutX="498.0" layoutY="497.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="163.0" text="EXCEL'E AKTAR" textAlignment="CENTER" />
-                              <Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueDeleteDataBase" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </AnchorPane>
-               </center>
-            </BorderPane>
-         </children></AnchorPane>
-   </children>
+	<children>
+		<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="840.0">
+			<children>
+				<BorderPane prefHeight="600.0" prefWidth="840.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+					<left>
+						<AnchorPane prefHeight="599.0" prefWidth="223.0" BorderPane.alignment="CENTER">
+							<children>
+								<AnchorPane prefHeight="600.0" prefWidth="223.0" style="-fx-background-color: GRAY;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<children>
+										<Button fx:id="homeBtn" layoutX="12.0" layoutY="221.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="25.0" prefWidth="200.0" text="ANA SAYFA" textAlignment="CENTER" />
+										<Button fx:id="addStockBtn" layoutX="12.0" layoutY="254.0" mnemonicParsing="false" onAction="#switchForm" prefWidth="200.0" text="STOK EKLE" textAlignment="CENTER" />
+										<Button fx:id="updateStockBtn" layoutX="12.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefWidth="200.0" text="STOK GÜNCELLE" textAlignment="CENTER" />
+										<Button fx:id="settingsBtn" layoutX="11.0" layoutY="561.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="25.0" prefWidth="201.0" text="AYARLAR" textAlignment="CENTER" />
+									</children>
+								</AnchorPane>
+							</children>
+						</AnchorPane>
+					</left>
+					<center>
+						<AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+							<children>
+								<AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<children>
+										<TableView layoutX="43.0" layoutY="82.0" prefHeight="479.0" prefWidth="702.0">
+											<columns>
+												<TableColumn prefWidth="117.0" text="C1" />
+												<TableColumn prefWidth="117.0" text="C2" />
+												<TableColumn prefWidth="117.0" text="C3" />
+												<TableColumn prefWidth="117.0" text="C4" />
+												<TableColumn prefWidth="117.0" text="C5" />
+												<TableColumn prefWidth="117.0" text="C6" />
+											</columns>
+										</TableView>
+										<TextField layoutX="43.0" layoutY="57.0" prefHeight="25.0" prefWidth="526.0" />
+										<ChoiceBox layoutX="574.0" layoutY="57.0" prefHeight="25.0" prefWidth="171.0" />
+									</children>
+								</AnchorPane>
+								<AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<children>
+										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
+										<TextField fx:id="barkodtextbox" layoutX="41.0" layoutY="73.0" />
+										<Label layoutX="194.0" layoutY="56.0" text="ÜRÜN ADI" />
+										<TextField fx:id="producttextbox" layoutX="194.0" layoutY="73.0" />
+										<Label layoutX="347.0" layoutY="56.0" text="ÜRÜN ADETİ" />
+										<Spinner fx:id="productquantityspinner" editable="true" layoutX="347.0" layoutY="73.0" prefHeight="25.0" prefWidth="90.0" />
+										<Label layoutX="442.0" layoutY="56.0" text="KATEGORİ" />
+										<ChoiceBox fx:id="categorychoicebox" layoutX="441.0" layoutY="73.0" prefWidth="150.0" />
+										<Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
+										<TextField fx:id="costtextbox" layoutX="594.0" layoutY="73.0" />
+										<Button fx:id="addProductBtn" layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ EKLE" textAlignment="CENTER" />
+										<TableView layoutX="43.0" layoutY="156.0" prefHeight="412.0" prefWidth="702.0">
+											<columns>
+												<TableColumn prefWidth="117.0" text="C1" />
+												<TableColumn prefWidth="117.0" text="C2" />
+												<TableColumn prefWidth="117.0" text="C3" />
+												<TableColumn prefWidth="117.0" text="C4" />
+												<TableColumn prefWidth="117.0" text="C5" />
+												<TableColumn prefWidth="117.0" text="C6" />
+											</columns>
+										</TableView>
+									</children>
+								</AnchorPane>
+								<AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<children>
+										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
+										<TextField layoutX="41.0" layoutY="73.0" />
+										<Label layoutX="194.0" layoutY="56.0" text="ÜRÜN ADI" />
+										<TextField layoutX="194.0" layoutY="73.0" />
+										<Label layoutX="347.0" layoutY="56.0" text="ÜRÜN ADETİ" />
+										<Spinner editable="true" layoutX="347.0" layoutY="73.0" prefHeight="25.0" prefWidth="90.0" />
+										<Label layoutX="442.0" layoutY="56.0" text="KATEGORİ" />
+										<ComboBox editable="true" layoutX="441.0" layoutY="73.0" prefWidth="149.0" />
+										<Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
+										<TextField layoutX="594.0" layoutY="73.0" />
+										<Button layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ GÜNCELLE" textAlignment="CENTER" />
+										<TableView layoutX="43.0" layoutY="201.0" prefHeight="361.0" prefWidth="702.0">
+											<columns>
+												<TableColumn prefWidth="117.0" text="C1" />
+												<TableColumn prefWidth="117.0" text="C2" />
+												<TableColumn prefWidth="117.0" text="C3" />
+												<TableColumn prefWidth="117.0" text="C4" />
+												<TableColumn prefWidth="117.0" text="C5" />
+												<TableColumn prefWidth="117.0" text="C6" />
+											</columns>
+										</TableView>
+										<TextField layoutX="43.0" layoutY="176.0" prefHeight="25.0" prefWidth="526.0" />
+										<ChoiceBox layoutX="574.0" layoutY="176.0" prefHeight="25.0" prefWidth="171.0" />
+									</children>
+								</AnchorPane>
+								<AnchorPane fx:id="settingsForm" layoutX="10.0" layoutY="10.0" prefHeight="610.0" prefWidth="787.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<children>
+										<Label layoutX="131.0" layoutY="58.0" text="KATEGORİ ADI" />
+										<TextField fx:id="categoriTextBox" layoutX="131.0" layoutY="75.0" />
+										<Button fx:id="newcategoribtn" layoutX="303.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueCategoriInsertDataBase" prefHeight="42.0" prefWidth="163.0" text="YENİ KATEGORİ OLUŞTUR" textAlignment="CENTER" />
+										<TableView fx:id="settingstableview" layoutX="43.0" layoutY="112.0" prefHeight="361.0" prefWidth="702.0">
+											<columns>
+												<TableColumn fx:id="settingstableviewcolumn1" prefWidth="117.0" text="C1" />
+												<TableColumn fx:id="settingstableviewcolumn2" prefWidth="255.0" text="C2" />
+											</columns>
+										</TableView>
+										<Label layoutX="92.0" layoutY="497.0" text="EXCEL'İN OLUŞTURULACAĞI DOSYA YOLU" />
+										<TextField editable="false" layoutX="92.0" layoutY="514.0" prefHeight="25.0" prefWidth="336.0" />
+										<Button layoutX="428.0" layoutY="514.0" mnemonicParsing="false" text="GÖZAT" />
+										<Button layoutX="498.0" layoutY="497.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="163.0" text="EXCEL'E AKTAR" textAlignment="CENTER" />
+										<Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueDeleteDataBase" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
+									</children>
+								</AnchorPane>
+							</children>
+						</AnchorPane>
+					</center>
+				</BorderPane>
+			</children>
+		</AnchorPane>
+	</children>
 </StackPane>
