--- a/StokTakip/bin/application/form1.fxml
+++ b/StokTakip/bin/application/form1.fxml
@@ -49,7 +49,7 @@
 										<ChoiceBox layoutX="574.0" layoutY="57.0" prefHeight="25.0" prefWidth="171.0" />
 									</children>
 								</AnchorPane>
-								<AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
 										<TextField fx:id="barkodtextbox" layoutX="41.0" layoutY="73.0" />
@@ -61,20 +61,20 @@
 										<ChoiceBox fx:id="categorychoicebox" layoutX="441.0" layoutY="73.0" prefWidth="150.0" />
 										<Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
 										<TextField fx:id="costtextbox" layoutX="594.0" layoutY="73.0" />
-										<Button fx:id="addProductBtn" layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ EKLE" textAlignment="CENTER" />
-										<TableView layoutX="43.0" layoutY="156.0" prefHeight="412.0" prefWidth="702.0">
+										<Button fx:id="addProductBtn" layoutX="323.0" layoutY="108.0" mnemonicParsing="false" onAction="#valueProductInsertDataBase" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ EKLE" textAlignment="CENTER" />
+										<TableView fx:id="addProductTableView" layoutX="43.0" layoutY="156.0" prefHeight="412.0" prefWidth="702.0">
 											<columns>
-												<TableColumn prefWidth="117.0" text="C1" />
-												<TableColumn prefWidth="117.0" text="C2" />
-												<TableColumn prefWidth="117.0" text="C3" />
-												<TableColumn prefWidth="117.0" text="C4" />
-												<TableColumn prefWidth="117.0" text="C5" />
-												<TableColumn prefWidth="117.0" text="C6" />
+												<TableColumn fx:id="addProductTableViewColumn1" prefWidth="117.0" text="C1" />
+												<TableColumn fx:id="addProductTableViewColumn2" prefWidth="117.0" text="C2" />
+												<TableColumn fx:id="addProductTableViewColumn3" prefWidth="117.0" text="C3" />
+												<TableColumn fx:id="addProductTableViewColumn4" prefWidth="117.0" text="C4" />
+												<TableColumn fx:id="addProductTableViewColumn5" prefWidth="117.0" text="C5" />
+												<TableColumn fx:id="addProductTableViewColumn6" prefWidth="117.0" text="C6" />
 											</columns>
 										</TableView>
 									</children>
 								</AnchorPane>
-								<AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
 										<TextField layoutX="41.0" layoutY="73.0" />
