--- a/StokTakip/src/application/form1.fxml
+++ b/StokTakip/src/application/form1.fxml
@@ -33,7 +33,7 @@
 					<center>
 						<AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
 							<children>
-								<AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<TableView fx:id="mainTableView" layoutX="43.0" layoutY="82.0" prefHeight="479.0" prefWidth="702.0">
 											<columns>
@@ -74,7 +74,7 @@
 										</TableView>
 									</children>
 								</AnchorPane>
-								<AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="updateStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
 										<TextField layoutX="41.0" layoutY="73.0" />
@@ -83,10 +83,11 @@
 										<Label layoutX="347.0" layoutY="56.0" text="ÜRÜN ADETİ" />
 										<Spinner fx:id="upgradeproductquantityspinner" editable="true" layoutX="347.0" layoutY="73.0" prefHeight="25.0" prefWidth="90.0" />
 										<Label layoutX="442.0" layoutY="56.0" text="KATEGORİ" />
-                              <ChoiceBox fx:id="upgradeChoiceBox" layoutX="441.0" layoutY="73.0" prefWidth="150.0" />
+										<ChoiceBox fx:id="upgradeChoiceBox" layoutX="441.0" layoutY="73.0" prefWidth="150.0" />
 										<Label layoutX="595.0" layoutY="56.0" text="MALİYET" />
 										<TextField layoutX="594.0" layoutY="73.0" />
-										<Button layoutX="323.0" layoutY="108.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ GÜNCELLE" textAlignment="CENTER" />
+										<Button fx:id="upgradeProductBtn" layoutX="238.0" layoutY="107.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ GÜNCELLE" textAlignment="CENTER" />
+										<Button fx:id="deleteProductBtn" layoutX="397.0" layoutY="107.0" mnemonicParsing="false" onAction="#valueProductDeleteDataBase" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ SİL" textAlignment="CENTER" />
 										<TableView fx:id="upgradeTableView" layoutX="43.0" layoutY="201.0" prefHeight="361.0" prefWidth="702.0">
 											<columns>
 												<TableColumn fx:id="upgradeTableViewColumn1" prefWidth="117.0" text="C1" />
@@ -97,8 +98,8 @@
 												<TableColumn fx:id="upgradeTableViewColumn6" prefWidth="117.0" text="C6" />
 											</columns>
 										</TableView>
-										<TextField layoutX="43.0" layoutY="176.0" prefHeight="25.0" prefWidth="526.0" />
-										<ChoiceBox fx:id="searchChoiceBox" layoutX="574.0" layoutY="176.0" prefHeight="25.0" prefWidth="171.0" />
+										<TextField fx:id="upgradeSearchTextbox" layoutX="43.0" layoutY="176.0" prefHeight="25.0" prefWidth="526.0" />
+										<ChoiceBox fx:id="upgradeSearchChoiceBox" layoutX="574.0" layoutY="176.0" prefHeight="25.0" prefWidth="171.0" />
 									</children>
 								</AnchorPane>
 								<AnchorPane fx:id="settingsForm" layoutX="10.0" layoutY="10.0" prefHeight="610.0" prefWidth="787.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -116,7 +117,7 @@
 										<TextField editable="false" layoutX="92.0" layoutY="514.0" prefHeight="25.0" prefWidth="336.0" />
 										<Button layoutX="428.0" layoutY="514.0" mnemonicParsing="false" text="GÖZAT" />
 										<Button layoutX="498.0" layoutY="497.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="163.0" text="EXCEL'E AKTAR" textAlignment="CENTER" />
-										<Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueDeleteDataBase" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
+										<Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" onAction="#valueCategoryDeleteDataBase" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
 									</children>
 								</AnchorPane>
 							</children>
