--- a/StokTakip/src/application/form1.fxml
+++ b/StokTakip/src/application/form1.fxml
@@ -33,23 +33,23 @@
 					<center>
 						<AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
 							<children>
-								<AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="mainForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<TableView fx:id="mainTableView" layoutX="43.0" layoutY="82.0" prefHeight="479.0" prefWidth="702.0">
 											<columns>
-												<TableColumn fx:id="mainTableViewColumn1" prefWidth="117.0" text="C1" />
-												<TableColumn fx:id="mainTableViewColumn2" prefWidth="117.0" text="C2" />
-												<TableColumn fx:id="mainTableViewColumn3" prefWidth="117.0" text="C3" />
-												<TableColumn fx:id="mainTableViewColumn4" prefWidth="117.0" text="C4" />
-												<TableColumn fx:id="mainTableViewColumn5" prefWidth="117.0" text="C5" />
-												<TableColumn fx:id="mainTableViewColumn6" prefWidth="117.0" text="C6" />
+												<TableColumn fx:id="mainTableViewColumn1" prefWidth="117.0" text="ID" />
+												<TableColumn fx:id="mainTableViewColumn2" prefWidth="117.0" text="BARKOD" />
+												<TableColumn fx:id="mainTableViewColumn3" prefWidth="117.0" text="ÜRÜN ADI" />
+												<TableColumn fx:id="mainTableViewColumn4" prefWidth="117.0" text="ADET" />
+												<TableColumn fx:id="mainTableViewColumn5" prefWidth="117.0" text="KATEGORİ" />
+												<TableColumn fx:id="mainTableViewColumn6" prefWidth="117.0" text="MALİYET" />
 											</columns>
 										</TableView>
 										<TextField fx:id="mainSearchTextbox" layoutX="43.0" layoutY="57.0" prefHeight="25.0" prefWidth="526.0" />
 										<ChoiceBox fx:id="mainChoiceBox" layoutX="574.0" layoutY="57.0" prefHeight="25.0" prefWidth="171.0" />
 									</children>
 								</AnchorPane>
-								<AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<AnchorPane fx:id="addStockForm" prefHeight="600.0" prefWidth="777.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<children>
 										<Label layoutX="41.0" layoutY="56.0" text="BARKOD" />
 										<TextField fx:id="barkodtextbox" layoutX="41.0" layoutY="73.0" prefHeight="25.0" prefWidth="120.0" />
@@ -70,12 +70,12 @@
 										<Button fx:id="addProductBtn" layoutX="324.0" layoutY="171.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ EKLE" textAlignment="CENTER" />
 										<TableView fx:id="addProductTableView" layoutX="43.0" layoutY="231.0" prefHeight="337.0" prefWidth="702.0">
 											<columns>
-												<TableColumn fx:id="addProductTableViewColumn1" prefWidth="117.0" text="C1" />
-												<TableColumn fx:id="addProductTableViewColumn2" prefWidth="117.0" text="C2" />
-												<TableColumn fx:id="addProductTableViewColumn3" prefWidth="117.0" text="C3" />
-												<TableColumn fx:id="addProductTableViewColumn4" prefWidth="117.0" text="C4" />
-												<TableColumn fx:id="addProductTableViewColumn5" prefWidth="117.0" text="C5" />
-												<TableColumn fx:id="addProductTableViewColumn6" prefWidth="117.0" text="C6" />
+												<TableColumn fx:id="addProductTableViewColumn1" prefWidth="117.0" text="ID" />
+												<TableColumn fx:id="addProductTableViewColumn2" prefWidth="117.0" text="BARKOD" />
+												<TableColumn fx:id="addProductTableViewColumn3" prefWidth="117.0" text="ÜRÜN ADI" />
+												<TableColumn fx:id="addProductTableViewColumn4" prefWidth="117.0" text="ADET" />
+												<TableColumn fx:id="addProductTableViewColumn5" prefWidth="117.0" text="KATEGORİ" />
+												<TableColumn fx:id="addProductTableViewColumn6" prefWidth="117.0" text="MALİYET" />
 											</columns>
 										</TableView>
 									</children>
@@ -96,12 +96,12 @@
 										<Button fx:id="deleteProductBtn" layoutX="397.0" layoutY="107.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="149.0" text="ÜRÜNÜ SİL" textAlignment="CENTER" />
 										<TableView fx:id="upgradeTableView" layoutX="43.0" layoutY="201.0" prefHeight="361.0" prefWidth="702.0">
 											<columns>
-												<TableColumn fx:id="upgradeTableViewColumn1" prefWidth="117.0" text="C1" />
-												<TableColumn fx:id="upgradeTableViewColumn2" prefWidth="117.0" text="C2" />
-												<TableColumn fx:id="upgradeTableViewColumn3" prefWidth="117.0" text="C3" />
-												<TableColumn fx:id="upgradeTableViewColumn4" prefWidth="117.0" text="C4" />
-												<TableColumn fx:id="upgradeTableViewColumn5" prefWidth="117.0" text="C5" />
-												<TableColumn fx:id="upgradeTableViewColumn6" prefWidth="117.0" text="C6" />
+												<TableColumn fx:id="upgradeTableViewColumn1" prefWidth="117.0" text="ID" />
+												<TableColumn fx:id="upgradeTableViewColumn2" prefWidth="117.0" text="BARKOD" />
+												<TableColumn fx:id="upgradeTableViewColumn3" prefWidth="117.0" text="ÜRÜN ADI" />
+												<TableColumn fx:id="upgradeTableViewColumn4" prefWidth="117.0" text="ADET" />
+												<TableColumn fx:id="upgradeTableViewColumn5" prefWidth="117.0" text="KATEGORİ" />
+												<TableColumn fx:id="upgradeTableViewColumn6" prefWidth="117.0" text="MALİYET" />
 											</columns>
 										</TableView>
 										<TextField fx:id="upgradeSearchTextbox" layoutX="43.0" layoutY="176.0" prefHeight="25.0" prefWidth="526.0" />
@@ -116,8 +116,8 @@
 										<Button fx:id="deletecategoribtn" layoutX="484.0" layoutY="58.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="163.0" text="KATEGORİYİ SİL" textAlignment="CENTER" />
 										<TableView fx:id="settingstableview" layoutX="43.0" layoutY="112.0" prefHeight="361.0" prefWidth="702.0">
 											<columns>
-												<TableColumn fx:id="settingstableviewcolumn1" prefWidth="117.0" text="C1" />
-												<TableColumn fx:id="settingstableviewcolumn2" prefWidth="255.0" text="C2" />
+												<TableColumn fx:id="settingstableviewcolumn1" prefWidth="117.0" text="ID" />
+												<TableColumn fx:id="settingstableviewcolumn2" prefWidth="255.0" text="KATEGORİ ADI" />
 											</columns>
 										</TableView>
 										<Label layoutX="92.0" layoutY="497.0" text="EXCEL'İN OLUŞTURULACAĞI DOSYA YOLU" />
